--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -28,7 +28,12 @@ h1, h2, h3, h4 {
 }
 
 #header-logo {
+    display: block;
     height: 100%;
+}
+
+#header-logo img {
+    max-height: 100%;
 }
 
 #header-text {
@@ -41,6 +46,9 @@ h1, h2, h3, h4 {
 }
 
 #header-title {
+    display: block;
+    color: black;
+    text-decoration: none;
     text-align: center;
     font-size:  32px;
     font-weight: 600;
@@ -120,11 +128,20 @@ h1, h2, h3, h4 {
     margin-bottom: 10px;
 }
 
+.event-title {
+    color: inherit;
+    text-decoration: none;
+}
+
+a.event-title:hover {
+    text-decoration: underline;
+}
+
 .event-type {
     font-weight: bold;
 }
 
-.event-title {
+.event-name {
     font-weight: normal;
 }
 
