--- a/theme/templates/page.html
+++ b/theme/templates/page.html
@@ -3,6 +3,6 @@
 <!-- Page Content ------------------------------------------------------------->
 {% block content %}
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pharetra eros vitae varius semper. Duis rutrum vitae mauris quis lacinia. Pellentesque arcu urna, luctus vitae dui non, fringilla mattis orci. Etiam tristique quam ac enim placerat placerat. Duis gravida scelerisque libero, vitae convallis ex maximus a. Cras efficitur dui a dapibus porta.</p>
+{{ page.content }}
 
 {% endblock %}
