--- a/theme/templates/structure/base.html
+++ b/theme/templates/structure/base.html
@@ -20,7 +20,7 @@
     <div id="page-header">
         <!-- Logo -->
 		<a id="header-logo" href="/">
-			<img src="theme/images/msail-logo-head.png">
+			<img src="{{ SITEURL }}/theme/images/msail-logo-head.png">
 		</a>
 		<!-- Header Text -->
         <div id="header-text"><div>
