--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -26,7 +26,7 @@
         <div class="event-main">
             <div class="event-header">
                 <!-- Title -->
-                <a class="event-title" href="#">
+                <a class="event-title" href="{{ article.url }}">
                     <span class="event-type">{{ article.category }}:</span>
                     <span class="event-name">{{ article.title }}</span>
                 </a>
