--- a/theme/templates/article.html
+++ b/theme/templates/article.html
@@ -10,7 +10,7 @@
 </h1>
 
 <!-- Info -->
-<div class="event-info">
+<div class="post-info">
     {{ article.date|strftime('%A, %B %d, %Y @ %I:%M %p') }}
     {% if article.location %}
         in {{ article.location }}
