--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -1,9 +1,12 @@
 {% extends "structure/base.html" %}
 
-<!-- Page Content ------------------------------------------------------------->
+<!-- Page Content ========================================================== -->
 {% block content %}
 
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pharetra eros vitae varius semper. Duis rutrum vitae mauris quis lacinia. Pellentesque arcu urna, luctus vitae dui non, fringilla mattis orci. Etiam tristique quam ac enim placerat placerat. Duis gravida scelerisque libero, vitae convallis ex maximus a. Cras efficitur dui a dapibus porta.</p>
+
+<!-- Upcoming Events ---------------------------------------------------------->
+<h1>Upcoming Events</h1>
 
 <div class="event-list">
     {% if articles %}
@@ -47,6 +50,52 @@
     </div>
     {% endfor %}
     {% endif %}
+</div>
+
+<!-- Leadership --------------------------------------------------------------->
+<h1>Active Leadership</h1>
+
+<div id="leadership">
+    <!-- Aaron Pollack -->
+    <div class="leader-box">
+        <div class="leader-portrait">
+            <img src="{{ SITEURL }}/theme/images/leadership/aaron.jpg">
+        </div>
+        <div class="leader-name">Aaron Pollack</div>
+        <div class="leader-info">BS '17, Econ &amp; CS</div>
+    </div>
+    <!-- Alex Chojnacki -->
+    <div class="leader-box">
+        <div class="leader-portrait">
+            <img src="{{ SITEURL }}/theme/images/leadership/alex.png">
+        </div>
+        <div class="leader-name">Alex Chojnacki</div>
+        <div class="leader-info">BS '17, Computer Science</div>
+    </div>
+    <!-- Benjamin Bray -->
+    <div class="leader-box">
+        <div class="leader-portrait">
+            <img src="{{ SITEURL }}/theme/images/leadership/ben.jpg">
+        </div>
+        <div class="leader-name">Benjamin Bray</div>
+        <div class="leader-info">BS '17, Mathematics</div>
+    </div>
+    <!-- Sam Tenka -->
+    <div class="leader-box">
+        <div class="leader-portrait">
+            <img src="{{ SITEURL }}/theme/images/leadership/sam.jpg">
+        </div>
+        <div class="leader-name">Sam Tenka</div>
+        <div class="leader-info">BS '18, Math &amp; Engineering</div>
+    </div>
+    <!-- Spencer Buja -->
+    <div class="leader-box">
+        <div class="leader-portrait">
+            <img src="{{ SITEURL }}/theme/images/leadership/spencer.jpg">
+        </div>
+        <div class="leader-name">Spencer Buja</div>
+        <div class="leader-info">BS '16, Computer Science</div>
+    </div>
 </div>
 
 {% endblock %}
