add last modified date; update gitignore

--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -238,7 +238,7 @@ a.event-title:hover {
 /* Page Footer ---------------------------------------------------------------*/
 
 #page-footer {
-    margin-top: 50px;
+    margin: 50px 0 20px 0;
     padding: 10px;
     border-top:  1px solid #999;
     color: #999;
