minor content changes

--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -3,7 +3,15 @@
 <!-- Page Content ========================================================== -->
 {% block content %}
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pharetra eros vitae varius semper. Duis rutrum vitae mauris quis lacinia. Pellentesque arcu urna, luctus vitae dui non, fringilla mattis orci. Etiam tristique quam ac enim placerat placerat. Duis gravida scelerisque libero, vitae convallis ex maximus a. Cras efficitur dui a dapibus porta.</p>
+<p>The <b>Michigan Student Artificial Intelligence Lab (MSAIL)</b> focuses on engaging students with machine learning, data science, and artificial intelligence at the University of Michigan.  Our purpose is best introduced by the following quote from an <a href="http://www.huffingtonpost.com/2015/05/13/andrew-ng_n_7267682.html">interview with Andrew Ng</a>,
+
+<blockquote>
+    <span class="quote">&ldquo;</span> I tell them that if you read research papers consistently, if you seriously study half a dozen papers a week and you do that for two years, after those two years you will have learned a lot...
+
+    But that sort of investment, if you spend a whole Saturday studying rather than watching TV, there's no one there to pat you on the back or tell you you did a good job. <span class="quote">&rdquo;</span> &emsp;&mdash;&nbsp; Andrew Ng
+</blockquote>
+
+We're those people, and we're here to help.  We'll never ask for your Saturdays, but our goal is to keep you motivated and excited about machine learning and data science.  With <b>over four hours of activities every week</b> targeted at students of all backgrounds, there are no more excuses!</p>
 
 <!-- Upcoming Events ---------------------------------------------------------->
 <h1>Upcoming Events</h1>
@@ -54,6 +62,8 @@
 
 <!-- Leadership --------------------------------------------------------------->
 <h1>Active Leadership</h1>
+
+The following awesome people work hard every week to put on the various activities hosted by MSAIL.  We are always looking for more help, so if you're interested in running a tutorial, presenting a paper, or sharing your ideas, approach any of us at a meeting or contact <a href="mailto:msail-planning@umich.edu">msail-planning@umich.edu</a>.
 
 <div id="leadership">
     <!-- Aaron Pollack -->
