--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -5,8 +5,23 @@ body {
 
 /* General Styles ------------------------------------------------------------*/
 
+a {
+    color: #0D57AA;
+    font-weight: 600;
+}
+
 h1, h2, h3, h4 {
     font-weight: 600;
+}
+
+blockquote {
+    color: #666;
+    font-style: italic;
+}
+
+blockquote .quote {
+    font-weight: bold;
+    font-size: 18px;
 }
 
 /* Page Header ---------------------------------------------------------------*/
@@ -17,12 +32,13 @@ h1, h2, h3, h4 {
     height: 140px;
     margin-bottom: 40px;
     padding: 20px 0;
-    background-color:  #c7ddf6;
+    background-color:  #002A5B; /*#c7ddf6;*/
 }
 
 #header-center {
     max-width: 800px;
     margin: 0 auto;
+    color: white;
 }
 
 #header-content {
@@ -51,7 +67,7 @@ h1, h2, h3, h4 {
 
 #header-title {
     display: block;
-    color: black;
+    color: inherit;
     text-decoration: none;
     text-align: center;
     font-size:  32px;
@@ -61,8 +77,8 @@ h1, h2, h3, h4 {
 /* Page Navigation -----------------------------------------------------------*/
 
 #header-nav {
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
     list-style: none;
     
     text-align: center;
@@ -82,7 +98,7 @@ h1, h2, h3, h4 {
 
 #header-nav li a:hover {
     text-decoration: underline;
-    color: blue;
+    
 }
 
 /* Page Content --------------------------------------------------------------*/
