added cheng-yu to site page

--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -11,7 +11,7 @@
     But that sort of investment, if you spend a whole Saturday studying rather than watching TV, there's no one there to pat you on the back or tell you you did a good job. <span class="quote">&rdquo;</span> &emsp;&mdash;&nbsp; Andrew Ng
 </blockquote>
 
-We're those people, and we're here to help.  We'll never ask for your Saturdays, but our goal is to keep you motivated and excited about machine learning and data science.  With <b>over four hours of activities every week</b> targeted at students of all backgrounds, there are no more excuses!</p>
+We're those people, and we're here to help.  We'll never ask for your Saturdays, but our goal is to keep you motivated and excited about machine learning and data science.  With <b>over four hours of activities every week</b> targeted at students of all backgrounds and ability, we invite anyone to join us!</p>
 
 <!-- Upcoming Events ---------------------------------------------------------->
 <h1>Upcoming Events</h1>
@@ -105,6 +105,14 @@ The following awesome people work hard every week to put on the various activiti
         </div>
         <div class="leader-name">Spencer Buja</div>
         <div class="leader-info">BS '16, Computer Science</div>
+    </div>
+    <!-- Spencer Buja -->
+    <div class="leader-box">
+        <div class="leader-portrait">
+            <img src="{{ SITEURL }}/theme/images/leadership/cheng-yu.jpg">
+        </div>
+        <div class="leader-name">Cheng-Yu Dai</div>
+        <div class="leader-info">PhD, Physics</div>
     </div>
 </div>
 
