display only 3 upcoming events

--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -18,7 +18,7 @@ We're those people, and we're here to help.  We'll never ask for your Saturdays,
 
 <div class="event-list">
     {% if articles %}
-    {% for article in articles %}
+    {% for article in articles[:3] %}
     <div class="event-panel">
         <!-- Event Side -->
         <div class="event-side">
