--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -90,6 +90,14 @@ The following awesome people work hard every week to put on the various activiti
         <div class="leader-name">Benjamin Bray</div>
         <div class="leader-info">BS '17, Mathematics</div>
     </div>
+    <!-- Cheng-Yu Dai -->
+    <div class="leader-box">
+        <div class="leader-portrait">
+            <img src="{{ SITEURL }}/theme/images/leadership/cheng-yu.jpg">
+        </div>
+        <div class="leader-name">Cheng-Yu Dai</div>
+        <div class="leader-info">PhD, Physics</div>
+    </div>
     <!-- Sam Tenka -->
     <div class="leader-box">
         <div class="leader-portrait">
@@ -105,14 +113,6 @@ The following awesome people work hard every week to put on the various activiti
         </div>
         <div class="leader-name">Spencer Buja</div>
         <div class="leader-info">BS '16, Computer Science</div>
-    </div>
-    <!-- Spencer Buja -->
-    <div class="leader-box">
-        <div class="leader-portrait">
-            <img src="{{ SITEURL }}/theme/images/leadership/cheng-yu.jpg">
-        </div>
-        <div class="leader-name">Cheng-Yu Dai</div>
-        <div class="leader-info">PhD, Physics</div>
     </div>
 </div>
 
